# tg_scrapper

./: Dockerfile  README.md  config.json  docker-compose.yml  entrypoint.sh  parser.py  pyproject.toml  requirements.txt
auth/: __init__.py  google_sheets_auth.py
utils/: __init__.py  channel_parser.py  env_loader.py  parser_settings.py
