[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["ZiG <x6vital@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.154.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
gspread = "^6.1.4"
oauth2client = "^4.1.3"
telethon = "^1.38.1"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
tqdm = "^4.67.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
